--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
 
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginButton">
                         <span class="fa fa-sign-in"></span> Login</a>
                 </span>
 
@@ -129,7 +129,7 @@
 
                         <div class="form-group row align-self-center mx-auto">
                             <label for="section" class="col-xs-12 col-md-2 col-form-label">Section</label>
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div class="btn-group btn-group-toggle">
                                 <label class="btn btn-success active">
                                     <input type="radio" name="options" id="option1" autocomplete="off" checked>
                                     Non-smoking
@@ -150,7 +150,7 @@
                         </div>
                         <div class="form-group row align-items-center">
                             <div class="col-4 offset-2">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-secondary">Cancel</button>
                                 <button type="submit" class="btn btn-primary">Reserve</button>
                             </div>
                         </div>
@@ -175,8 +175,7 @@
                 </div>
 
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
-                        data-target="#reserveModal">Reserve Table</a>
+                    <a id="reserveButton" role="button" class="btn btn-block nav-link btn-warning">Reserve Table</a>
                 </div>
 
             </div>
@@ -238,7 +237,7 @@
                     <button class="btn btn-danger btn-sm" id="carouselButton">
                         <span class="fa fa-pause"></span>
                     </button>
-                  
+
                 </div>
 
             </div>
@@ -308,19 +307,26 @@
     <script>
         $(document).ready(function () {
             $("#mycarousel").carousel({ interval: 2000 });
-            $("#carouselButton").click(function(){
+            $("#carouselButton").click(function () {
                 if ($("#carouselButton").children("span").hasClass('fa-pause')) {
                     $("#mycarousel").carousel('pause');
                     $("#carouselButton").children("span").removeClass('fa-pause');
                     $("#carouselButton").children("span").addClass('fa-play');
                 }
-                else if ($("#carouselButton").children("span").hasClass('fa-play')){
+                else if ($("#carouselButton").children("span").hasClass('fa-play')) {
                     $("#mycarousel").carousel('cycle');
                     $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass('fa-pause');                    
+                    $("#carouselButton").children("span").addClass('fa-pause');
                 }
             });
+            $("#reserveButton").click(function () {
+                $("#reserveModal").modal('toggle')
+            });
+            $("#loginButton").click(function () {
+                $("#loginModal").modal('toggle')
+            });
         });
+
     </script>
 
 </body>
